# whisper_std

./: Cargo.toml  build.rs
src/: lib.rs
src/whisper/: list.wh
