[package]
name = "whisper_std"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
bincode = "1.2.1"
whisper = { path = "../whisper" }

[build-dependencies]
whisper_util = { path = "../whisper_util" }
failure = "0.1.6"
